--- a/style.css
+++ b/style.css
@@ -6,27 +6,54 @@
 
 body {
   background-color: #deebdd;
-  background-image: linear-gradient(315deg, #deebdd 0%, #bbdbbe 74%);
+  background-image: linear-gradient(315deg, #deebdd 0%, #bbdbbe 100%);
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: "Poppins", sans-serif;
   margin: 0;
+  min-height: 100vh;
 }
 .quiz-container {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px 5px rgba(100, 100, 100, 0.1);
+  overflow: hidden;
   width: 600px;
   max-width: 100%;
 }
 
-.quiz-header {
-  padding: 2rem;
+.question-header {
+  padding: 4rem;
+}
+
+h2 {
+  margin: 0;
+}
+
+ul li {
+  font-size: 1.1rem;
+  margin: 1rem 0;
 }
 
 ul {
   list-style-type: none;
   padding: 0;
+}
+
+button {
+  background-color: rgb(57, 4, 107);
+  border: none;
+  color: white;
+  cursor: pointer;
+  display: block;
+  font-family: inherit;
+  font-size: 1.1rem;
+  width: 100%;
+  padding: 1.1rem;
+}
+
+button:hover {
+  background-color: rgb(34, 1, 65);
 }
